--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@nx/eslint-plugin": "18.2.4",
     "@nx/jest": "18.2.4",
     "@nx/js": "18.2.4",
-    "@nx/next": "^18.2.4",
+    "@nx/next": "18.2.4",
     "@nx/react": "^18.2.4",
     "@nx/rollup": "18.2.4",
     "@nx/vite": "18.2.4",
@@ -62,7 +62,8 @@
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
     "vite": "~5.0.0",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "nx": "18.2.4"
   },
   "dependencies": {
     "@mint-ui/map": "^1.0.1",
@@ -78,5 +79,8 @@
     "recoil": "^0.7.7",
     "styled-components": "5.3.6",
     "tslib": "^2.3.0"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
