--- a/package.json
+++ b/package.json
@@ -56,20 +56,21 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~22.1.0",
+    "nx": "18.2.4",
     "prettier": "^2.6.2",
     "swc-loader": "0.1.15",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
     "vite": "~5.0.0",
-    "vitest": "^1.3.1",
-    "nx": "18.2.4"
+    "vitest": "^1.3.1"
   },
   "dependencies": {
     "@mint-ui/map": "^1.0.1",
     "@next/third-parties": "^14.2.13",
     "axios": "^1.6.8",
     "express": "^4.19.2",
+    "maplibre-gl": "^5.1.1",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
