--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
+    "@types/proj4": "^2.5.6",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "@types/react-is": "18.2.2",
@@ -72,6 +73,7 @@
     "express": "^4.19.2",
     "maplibre-gl": "^5.1.1",
     "next": "14.0.4",
+    "proj4": "^2.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
