--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-dom": "18.2.14",
     "@types/react-is": "18.2.2",
     "@types/styled-components": "5.1.26",
+    "@types/suncalc": "^1.9.2",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
     "@vitejs/plugin-react": "^4.2.0",
@@ -81,6 +82,7 @@
     "react-router-dom": "^6.22.3",
     "recoil": "^0.7.7",
     "styled-components": "5.3.6",
+    "suncalc": "^1.9.0",
     "tslib": "^2.3.0"
   },
   "nx": {
