--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "vitest": "^1.3.1"
   },
   "dependencies": {
+    "@mint-ui/core": "^1.0.1",
     "@mint-ui/map": "^1.0.1",
     "@next/third-parties": "^14.2.13",
     "axios": "^1.6.8",
