--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@swc/plugin-styled-components": "^1.5.67",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
+    "@types/navermaps": "^3.7.9",
     "@types/node": "18.16.9",
     "@types/proj4": "^2.5.6",
     "@types/react": "18.2.33",
