--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev:ribs": "nx dev ribs-app",
     "build:ribs": "nx build ribs-app",
     "image:ribs": "docker build -f app/ribs-app/docker/Dockerfile -t ribs:latest .",
-    "start:ribs": "next start"
+    "start:ribs": "next start",
+    "dev:bot": "nx serve my-bot-server-app",
+    "build:bot": "nx build my-bot-server-app"
   },
   "author": "",
   "license": "ISC",
@@ -16,16 +18,21 @@
     "@babel/preset-react": "^7.14.5",
     "@nx/eslint": "18.2.4",
     "@nx/eslint-plugin": "18.2.4",
+    "@nx/express": "^18.3.5",
     "@nx/jest": "18.2.4",
-    "@nx/js": "18.2.4",
+    "@nx/js": "18.3.5",
     "@nx/next": "18.2.4",
+    "@nx/node": "18.3.5",
     "@nx/react": "^18.2.4",
     "@nx/rollup": "18.2.4",
     "@nx/vite": "18.2.4",
     "@nx/web": "18.2.4",
+    "@nx/webpack": "18.3.5",
     "@openapitools/openapi-generator-cli": "^2.13.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@rollup/plugin-url": "^7.0.0",
     "@svgr/rollup": "^8.0.1",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.8.0",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
@@ -61,12 +68,14 @@
     "jsdom": "~22.1.0",
     "nx": "18.2.4",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
     "swc-loader": "0.1.15",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
     "vite": "~5.0.0",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@mint-ui/core": "^1.0.1",
