--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
     "@babel/preset-react": "^7.14.5",
     "@nx/eslint": "18.2.4",
     "@nx/eslint-plugin": "18.2.4",
-    "@nx/express": "^18.3.5",
+    "@nx/express": "18.2.4",
     "@nx/jest": "18.2.4",
-    "@nx/js": "18.3.5",
+    "@nx/js": "18.2.4",
     "@nx/next": "18.2.4",
-    "@nx/node": "18.3.5",
+    "@nx/node": "18.2.4",
     "@nx/react": "^18.2.4",
     "@nx/rollup": "18.2.4",
     "@nx/vite": "18.2.4",
     "@nx/web": "18.2.4",
-    "@nx/webpack": "18.3.5",
+    "@nx/webpack": "18.2.4",
     "@openapitools/openapi-generator-cli": "^2.13.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@rollup/plugin-url": "^7.0.0",
