fastapi embedding server 추가

--- a/nx.json
+++ b/nx.json
@@ -67,6 +67,9 @@
         "serveTargetName": "serve",
         "previewTargetName": "preview"
       }
+    },
+    {
+      "plugin": "@nxlv/python"
     }
   ],
   "generators": {
