--- a/package.json
+++ b/package.json
@@ -80,10 +80,12 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^9.0.0",
     "@mint-ui/core": "^1.0.1",
     "@mint-ui/map": "^1.0.1",
     "@next/third-parties": "^14.2.13",
     "axios": "^1.6.8",
+    "body-parser": "^2.2.0",
     "express": "^4.19.2",
     "maplibre-gl": "^5.1.1",
     "next": "14.0.4",
