--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "maplibre-gl": "^5.1.1",
     "next": "14.0.4",
     "proj4": "^2.15.0",
+    "prom-client": "^15.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
