--- a/package.json
+++ b/package.json
@@ -84,11 +84,14 @@
     "@mint-ui/core": "^1.0.1",
     "@mint-ui/map": "^1.0.1",
     "@next/third-parties": "^14.2.13",
+    "@types/pg": "^8.15.5",
     "axios": "^1.6.8",
     "body-parser": "^2.2.0",
+    "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "maplibre-gl": "^5.1.1",
     "next": "14.0.4",
+    "pg": "^8.16.3",
     "proj4": "^2.15.0",
     "prom-client": "^15.1.3",
     "react": "18.2.0",
