--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "express": "^4.19.2",
     "maplibre-gl": "^5.1.1",
     "next": "14.0.4",
+    "node-cron": "^4.2.1",
     "pg": "^8.16.3",
     "proj4": "^2.15.0",
     "prom-client": "^15.1.3",
