nx@react version fix

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@nx/js": "18.2.4",
     "@nx/next": "18.2.4",
     "@nx/node": "18.2.4",
-    "@nx/react": "^18.2.4",
+    "@nx/react": "18.2.4",
     "@nx/rollup": "18.2.4",
     "@nx/vite": "18.2.4",
     "@nx/web": "18.2.4",
